# cloud-cost-optimizer

./: .gitignore  CLAUDE.md  README.md  prompts.md  pyproject.toml  slides.md
.claude/skills/code-reviewer/: SKILL.md
.claude/skills/finops-domain/: SKILL.md
.claude/skills/python-implementer/: SKILL.md
.claude/skills/test-author/: SKILL.md
app/: db.py  main.py  models.py  remediation.py  schemas.py  services.py
app/api/: scans.py
app/ingestion/: _parsing.py  aws_cur.py  azure.py  normalize.py
app/rules/: base.py  catalog.py
data/: EXPECTED.md  generate_samples.py  sample_aws_cur.csv  sample_azure.csv
docs/: PLAN.md  PROMPT_PLAYBOOK.md  SPEC.md
static/: index.html
tests/: conftest.py  test_api.py  test_dashboard.py  test_health.py  test_ingestion.py  test_models.py  test_remediation.py  test_rules.py  test_samples.py
